--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,6 +1,7 @@
 .form_container {
     display: flex;
     justify-content: center;
+    margin-bottom: 6rem;
 }
 
 input[type="text"], input[type="email"], textarea {
@@ -21,4 +22,10 @@ textarea {
 label {
     color: #2845A2;
     margin-left: 1rem;
+}
+
+@media only screen and (max-width: 768px) {
+    input[type="text"], input[type="email"], textarea {
+       width: 80vw;
+    }
 }
