--- a/styles/intro.css
+++ b/styles/intro.css
@@ -44,6 +44,10 @@ font-weight: 900;
     text-align: center;
   }
   .card {
+    margin-top: 1rem;
      width: 80%;
+  }
+  .text_big {
+    font-size: 2rem;
   }
  }
