--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,29 +1,73 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&display=swap');
-html,body {
-    font-family: Montserrat, sans-serif;
-    line-height: 1.5;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    scroll-behavior: smooth;
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/Montserrat-Regular.ttf') format('truetype');
 }
-main {
-    margin-top: 3.5rem;
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/Montserrat-Medium.ttf') format('truetype');
+  font-weight: 500;
 }
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/Montserrat-Bold.ttf') format('truetype');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/Montserrat-Black.ttf') format('truetype');
+  font-weight: 900;
+}
+
+html,
+body {
+  font-family: Montserrat, sans-serif;
+  line-height: 1.5;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+}
+
 p {
-    margin: 0;
+  margin: 0;
 }
+
+main {
+  margin-top: 3.5rem;
+}
+
+.gradient {
+  background: linear-gradient(90deg, rgba(123, 97, 255, 1) 60%, rgba(123, 97, 255, 0.71) 150%);
+}
+
+.shadow {
+  box-shadow: 0px 20px 40px rgba(157, 157, 157, 0.25);
+}
+
 .section_title {
-    color: #3B38E8;
-    text-align: center;
+  color: #3B38E8;
+  text-align: center;
 }
+
+.text_normal {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text_big {
+  font-size: 3.75rem;
+  line-height: 1;
+  font-weight: 900;
+}
+
 .button {
-    padding: 0.6rem 2rem;
-    border-radius: 0.75rem;
-    border: 1px solid rgb(123, 97, 255);
-    cursor: pointer;
-    margin: 0.75rem 0;
-    background: linear-gradient(300deg, rgba(123, 97, 255, 1) 60%, rgba(123, 97, 255, 0.71) 110%);
-    color: white;
-  }
-  
+  padding: 0.6rem 2rem;
+  border-radius: 0.75rem;
+  border: 1px solid rgb(123, 97, 255);
+  cursor: pointer;
+  margin: 0.75rem 0;
+  color: white;
+}
