--- a/styles/nav.css
+++ b/styles/nav.css
@@ -8,7 +8,6 @@
     display: flex;
     align-items: center;
     z-index: 50;
-    box-shadow: 0px 20px 40px rgba(157, 157, 157, 0.25);
 }
 
 .nav_items {
@@ -25,10 +24,9 @@
 
 .nav_List_items {
     list-style-type: none;
-    /* overflow: hidden; */
-    /* margin: 0;
-    padding: 0; */
-    display: flex;
+}
+ul.nav_List_items li {
+    display: inline-block;
 }
 
 ul.nav_List_items a {
